--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -10,27 +10,7 @@ body {
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
-/* Carousel base class */
-.carousel {
-  height: 500px;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
 
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
-}
 
 
 /* MARKETING CONTENT
@@ -68,7 +48,7 @@ body {
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: 840px) {
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 20px;
@@ -81,8 +61,40 @@ body {
   }
 }
 
-@media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
+@media (max-width: 678px) {
+    /* Bump up size of carousel content */
+    .carousel-caption h1 {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 588px) {
+    /* Bump up size of carousel content */
+    .carousel-caption > h1, .carousel-caption > p, .carousel-indicators {
+        display: none;
+    }
+}
+
+/* Common CSS for home, welcome, and product details pages */
+.thumbnail img {
+    width: 100%;
+}
+
+.ratings {
+    padding-right: 10px;
+    padding-left: 10px;
+    color: #d17581;
+}
+
+.thumbnail {
+    padding: 0;
+}
+
+.thumbnail .caption-full {
+    padding: 9px;
+    color: #333;
+}
+
+footer {
+    margin: 50px 0;
 }
