Changed the layout for displaying cart products. Added update cart's quantity functionality

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,6 +7,13 @@ html {
 body {
   margin: 0;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 article,
 aside,
 details,
