Displaying all the reviews for the admin. Admin can delete a review. Added a new named route. Created a new view for displaying all the reviews. Changed a bit of CSS and added round() function for the ratings inside product and product_details

--- a/public/admin/css/sb-admin-2.css
+++ b/public/admin/css/sb-admin-2.css
@@ -8,6 +8,12 @@ body {
     background-color: #f8f8f8;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 #wrapper {
     width: 100%;
 }
